# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  task3-observability-report.md  test_cron.py  test_healthy.py  test_obs.py  test_trigger.py  test_what_went_wrong.py  test_ws.py  toolkit  toolkit.pub
backend/src/lms_backend/routers/: items.py
lab/tasks/required/: task-1.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
