[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability tools (VictoriaLogs and VictoriaTraces)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]

[tool.hatch.build.options]
source = "src"
